# Advanced_programming_Projects

./: LICENSE  README.md
CA0/Code/: main.cpp  main2.cpp
CA1/Code/: main.cpp  positive-words.txt
CA2/Code/: Q0.cpp  Q1.cpp  Q2.cpp  Q3.cpp
CA3/Code/: c.cpp  input.txt  main.cpp
CA4/Code/: main.cpp
CA4/tests/test0/: test0.in  test0.out
CA4/tests/test1/: test1.in  test1.out
CA4/tests/test2/: test2.in  test2.out
CA6/: build.sh  makefile
CA6/include/: Const.hpp  CountMission.hpp  DistanceMission.hpp  Driver.hpp  DriverMissionHandler.hpp  InputHandler.hpp  Mission.hpp  TimeMission.hpp  Trip.hpp  Util.hpp
CA6/src/: CounntMission.cpp  DistanceMission.cpp  Driver.cpp  DriverMissionHandler.cpp  InputHandler.cpp  Mission.cpp  TimeMission.cpp  Trip.cpp  Util.cpp  main.cpp
‌TA/TA_project_1/: CMakeLists.txt  makefile  quizMaker
‌TA/TA_project_1/Inputs/: corrects.txt  incorrect.txt  input.txt
‌TA/TA_project_1/include/: Exceptions.h  MultipleAnswerQuestion.h  Question.h  QuestionManager.h  ShortAnswerQuestion.h  SingleAnswerQuestion.h  constant.h
‌TA/TA_project_1/src/: Exceptions.cpp  MultipleAnswerQuestion.cpp  Question.cpp  QuestionManager.cpp  ShortAnswerQuestion.cpp  SingleAnswerQuestion.cpp  main.cpp
‌TA/TA_project_2/: CMakeLists.txt  Makefile  ModelSim.out
‌TA/TA_project_2/include/: Circuit.hpp  Constant.hpp  Exceptions.hpp  Gate.hpp  GateAnd.hpp  GateNand.hpp  GateNor.hpp  GateNot.hpp  GateOr.hpp  GateXor.hpp  InputHandler.hpp  Module.hpp  Utils.hpp  Wire.hpp
‌TA/TA_project_2/src/: Circuit.cpp  Exceptions.cpp  Gate.cpp  GateAnd.cpp  GateNand.cpp  GateNor.cpp  GateNot.cpp  GateOr.cpp  GateXor.cpp  InputHandler.cpp  Module.cpp  Utils.cpp  Wire.cpp  main.cpp
‌TA/TA_project_2/test/: test2.txt  test3.txt
(+25 files in other folders)
